--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-  <title>Static Website</title>
   <meta charset="UTF-8">
+  <title>Static Website</title>
+  <link rel="icon" href="img/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.css" rel="stylesheet"> </head>
 
 <body>
-  <h1>Hello world!</h1>
-  <a href="/html/sample.html">A link to click on.</a>
+  <h1>Hello There world!</h1>
+  <a href="pages/sample.html">A link to click on.</a>
 </body>
   <script src="js/script.js"></script>
 </html>
