added html,css,js,images for Build a Portfolio Site project

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Static Website</title>
-  <link rel="icon" href="img/favicon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet"> </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="icon" href="assets/img/icon.png">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700">
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
 
 <body>
-  <h1>Hello There world!</h1>
-  <a href="pages/sample.html">A link to click on.</a>
+  <div class="container">
+    <header>
+      <div class="row">
+        <div class="col-xs-1"><img src="assets/img/icon.png" class="logo-icon" alt="Logo"></div>
+        <div class="col-xs-3 name-title">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="no-wrap">Gregg Patton</h1></div>
+            <div class="col-md-12">
+              <h4>Full-Stack Web Developer</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="row">
+      <div class="col-md-12"><img src="assets/img/line.png" class="line" alt="Divider Line"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>
+          Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis
+          in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12"><img src="assets/img/main-image.jpg" class="main-image" alt="Main Image"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="featured-work">Featured Work</h1></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 featured-work-container">
+        <div class="thumbnail"><img src="assets/img/movie-trailer-thumbnail.png" alt="Movie Trailer Thumbnail Image">
+          <div class="caption">
+            <h3>Movie Trailers</h3><a href="https://github.com/greggpatton/UDACITY-Movie-Trailer-website-project " target="_blank">https://github.com/greggpatton/UDACITY-Movie-Trailer-website-project </a></div>
+        </div>
+        <div class="thumbnail"><img src="assets/img/portfolio-website-thumbnail.png"  alt="Portfolio Website Thumbnai Imagel">
+          <div class="caption">
+            <h3>Portfolio website</h3><a href="https://github.com/greggpatton/udacity-portfolio-website " target="_blank">https://github.com/greggpatton/udacity-portfolio-website </a></div>
+        </div>
+        <div class="thumbnail"><img src="assets/img/drone-racer-thumbnail.png" alt="Drone Racer Thumbnail Image">
+          <div class="caption">
+            <h3>Drone racer</h3><a href="https://github.com/greggpatton/drone-racer " target="_blank">https://github.com/greggpatton/drone-racer </a></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <footer>
+          <h5>Copyright &copy; 2017, All Rights Reserved</h5>
+        </footer>
+      </div>
+    </div>
+  </div>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
-  <script src="js/script.js"></script>
+
 </html>
